# mtuci-rs

./: Cargo.toml
ch1/: Cargo.toml
ch1/src/: main.rs  try.rs
ch2/src/: main.rs
homework_1/: Cargo.toml
homework_1/src/: fizzbuzz.rs  main.rs  rust_book.rs  rust_book_ch2.rs  rust_book_ch3.rs
homework_2/: Cargo.toml
homework_2/src/: task1.rs  task2.rs
