[package]
name = "homework_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]

name = "fizzbuzz"
path = "src/fizzbuzz.rs"

[[bin]]
name = "book1"
path = "src/rust_book_ch1.rs"

[[bin]]
name = "guessing_game"
path = "src/rust_book_ch2.rs"

[[bin]]
name = "programming_concepts"
path = "src/rust_book_ch3.rs"

[dependencies]
rand = "0.8.5"